...
import { linkCheckboxGroupSetting, linkCheckboxSetting, linkInputSetting, linkSelectSetting, linkVisibilityToggleButtonSetting } from './settings.js';
import { init as initOverlay, onScreenSizeChanged } from './overlay.js';
import { fetchEvents } from './events-api.js';
import { attachUsb, detachUsb, getUsbState } from './usb-api.js';

const screenContainer = getElementById('screenContainer', HTMLDivElement);
const screenCanvas = getElementById('screenCanvas', HTMLCanvasElement);
const pointerTypeSelect = getElementById('pointerTypeSelect', HTMLSelectElement);
const pointerEnabledCheckbox = getElementById('pointerEnabledCheckbox', HTMLInputElement);
const pointerMoveLateCheckbox = getElementById('pointerMoveLateCheckbox', HTMLInputElement);
const showLocalPointerCheckbox = getElementById('showLocalPointerCheckbox', HTMLInputElement);
const keyboardEnabledCheckbox = getElementById('keyboardEnabledCheckbox', HTMLInputElement);
const keyboardLayoutSelect = getElementById('keyboardLayoutSelect', HTMLSelectElement);
const sendTextInput = getElementById('sendTextInput', HTMLTextAreaElement);
const sendTextButton = getElementById('sendTextButton', HTMLButtonElement);
const fitScreenCheckbox = getElementById('fitScreenCheckbox', HTMLInputElement);
const toggleFullscreenButton = getElementById('toggleFullscreenButton', HTMLButtonElement);
const mjpegQualityInput = getElementById('mjpegQualityInput', HTMLInputElement);
const mjpegSubsamplingSelect = getElementById('mjpegSubsamplingSelect', HTMLSelectElement);
const capsLockButton = getElementById('capsLockButton', HTMLButtonElement);
const numLockButton = getElementById('numLockButton', HTMLButtonElement);
const showToolbarButton = getElementById('showToolbarButton', HTMLButtonElement);
const toolbarPanel = getElementById('toolbarPanel', HTMLDivElement);
const attachUsbButton = getElementById('attachUsbButton', HTMLButtonElement);
const detachUsbButton = getElementById('detachUsbButton', HTMLButtonElement);

const mjpegVideo = {
	abortController: new AbortController(),
...
